stylesheet.less
/* ... */
// 4. Home
// Nothing to see here

// 5. Menu
.widget.menu {
	border: none;
	h1 {
		position: relative;
		padding-bottom: 0;
	}
	h2 {
		position: relative;
		display: inline-block;
	}
	.menu-header {
		margin-bottom: 14px;
		float: left;
		width: 100%;
		text-align: center;
		overflow: hidden;
		p {
			position: relative;
			display: inline-block;
			font-size: bkscale(@font-swatch6-font-size, 0.85);
			letter-spacing:@font-swatch6-letter-spacing;
			font-weight: @font-swatch2-font-weight;
			padding: 0 30px;
			&:before, &:after {
				position: absolute;
				content: "";
				display: block;
				position: absolute;
				width: 1000%;
				top: 50%;
				height: 2px;
				background: darken(@color-swatch1, 5%);
			}
			&:before {
				right: 100%;
			}
			&:after {
				left: 100%;
			}
		}
	}
}

.menu-items {
	clear: both;
	text-align: center;
}

.menu-subsection .menu-subsection-promoted .menu-items {
	background: lighten(@color-swatch5, 75%);
	border: 1px solid lighten(@color-swatch5, 50%);
	border-radius: 3px;
}

.menu-item {
	padding: 10px 40px;
	float: left;
	width: 100%;
}

.menu-item-image-wrap {
	margin-bottom: 5px;
}

.menu-item-price {
	padding-bottom: 8px;
	p {
		font-family:@font-swatch6-font-family;
		font-size: bkscale(@font-swatch6-font-size, 0.9);
		color: darken(@color-swatch5, 30%);
		font-weight:@font-swatch6-font-weight;
		letter-spacing:@font-swatch6-letter-spacing;
	}
}

.menu .menu-subsection {
	padding: 0;
	margin-bottom: 40px;
}

.menu-subsection-name {
	color: @color-swatch4;
}

.menu-item-promoted,
.blog-post-metadata,
.menu-subsection .menu-items {
	background: lighten(@color-swatch1, 5%);
	border: 1px solid darken(@color-swatch1, 5%);
	border-radius: 3px;
}

.menu-subsection .menu-items {
	padding: 0 15px;
}

.menu .menu-items li {
	padding: 5px 0 12px;
	margin-bottom: 20px;
	&.menu-item-promoted {
		padding: 5px 15px 12px;
	}
}

.inner-item {
	padding: 15px 0;
}

.menu .menu-section-item-dietary-props .dietary-icon,
.menu .menu-info .dietary-icon {
	padding: 1px 5px 1px 0;
	&:before, &:after {
		color: @color-swatch2;
	}
	&:before {
		content: "\2605";
	}
}

.menu-item-description {
	padding-bottom: 10px;
}

.widget.menusections {
	text-align: center;
	margin-left: 0;
	margin-right: 0;
	.menu-section-list {
		border-bottom: 1px solid darken(@color-swatch1, 5%);
	}
	ul li {
		margin: 0;
	}
	a {
		padding: 10px 20px;
	}
}

// 6. Blog List
.blog-post-item {
	padding-bottom: 20px;
}

.widget.blogpostlist,
.blogpost-page .blog-post-item {
	padding: 20px 0;
}

div.blog-post-feature-image-wrap {
	height: 350px;
	margin-bottom: 20px;
}

.blog-list-footer {
	text-align: center;
	clear: both;
	a {
		margin: 0 20px;
	}
}

.blog-post-item {
	padding-bottom: 40px;
	clear: both;
}


// 7. Blog Post
.blog-post-metadata {
	padding: 10px 20px;
	margin-top: 10px;
	time, p {
		color: lighten(@color-swatch5, 10%);
	}
}

// 8. Forms
.widget.ecomproduct .ecom-product .ecom-product-info .ecom-product-variation select,
.widget.ecomcheckout .delivery select,
select,
input,
input[type=email],
input[type=text],
input[type=search],
textarea,
.contactform input,
.contactform textarea,
.widget.profile form fieldset input {
	text-indent: 0;
	padding: 8px 9px 10px;
	background-color: lighten(@color-swatch1, 5%);
	border: 1px solid darken(@color-swatch1, 5%);
	outline: none;
	-webkit-transition: border .2s;
	-moz-transition: border .2s;
	-ms-transition: border .2s;
	transition: border .2s;
	border-radius: 3px;
	line-height: 18px;
	&:hover, &:focus {
		border: 1px solid darken(@color-swatch1, 20%);
	}
}

select::-ms-expand {
	display: none;
}

.widget.ecomproduct .ecom-product .ecom-product-info .ecom-product-variation select,
select {
	-moz-appearance: none;
	text-indent: 0.01px;
	text-overflow: '';
}

.widget.profile, .widget.signupform, .widget.blogsearch {
	input[type=email], input[type=search] {
		width: 100%;
		height: auto;
	}
}

textarea {
	resize: vertical;
}


.widget.ecomproduct .ecom-product .ecom-product-info .ecom-product-variation select,
.widget.ecomcheckout .delivery select,
select {
	cursor: pointer;
	-webkit-appearance: none;
	-webkit-border-radius: 0;
	position: relative;
	background-color: darken(@color-swatch1, 10%);
	border: 1px solid darken(@color-swatch1, 15%);
	background-image: image('/images/arrow-down.png');
	background-repeat: no-repeat;
	background-position: right 12px center;
	background-position-x: 95%;
	background-position-y: 53%;
	margin-bottom: 12px;
	padding-right: 33px;
	border-radius: 3px;
}

input[type="search"]::-webkit-search-decoration {
	display: none;
}

::-webkit-input-placeholder {
	color: darken(@color-swatch1, 30%);
}
:-moz-placeholder {
	color: darken(@color-swatch1, 30%);
}
::-moz-placeholder {
	color: darken(@color-swatch1, 30%);
}
:-ms-input-placeholder {
	color: darken(@color-swatch1, 30%);
}
/* ... */

